# snitch-fw

./: .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
scripts/: build-linux.ps1  update-version.mjs
src/: analyzer.rs  main.rs  model.rs  ui.rs
src/collectors/: docker.rs  firewall.rs  mod.rs  ss.rs
