[package]
name = "snitch-fw"
version = "1.0.0"
edition = "2024"
description = "Linux host TUI that correlates listening sockets with firewall and Docker signals"
license = "MIT"
readme = "README.md"
keywords = ["firewall", "linux", "networking", "tui", "docker"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
